@@ -14,6 +14,10 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Remove static buffer.
+ server/player.c
+Nicolas Weeger 2008-03-30
+
 common/living.c: remove unneeded test.
 Nicolas Weeger 2008-03-30
 
